ART 3.5
* Add field to indicate use of groovy instead of sql in report source

ART 3.4
* Allow jobs to specify the time zone in which the schedule will run
* Include template file in report export/import
* Provide a REST API for dealing with users. This is experimental and subject to change.
* Allow users to save parameter selections
* Allow use of GroovyRowResult data with "usesGroovy" queries
* Updated French translation (thanks to Pierre Blanchou)
* Have job next run date consider holidays
* Allow specifying of parameter default values for users and user groups
* Allow parameters to use fixed values
* Fix for secondary charts not being used
* Allow testing of report in edit report page
* Updated univocity-parsers, spring

ART 3.3
* Allow sending of email if there is an error with a particular job
* Added ReportEngine report types
* Fix for double values only showing one decimal value by default
* Allow dynamic recipient query to specify file open or modify password
* Added password encryptor
* Fix for multiple c3.js, pivottable.js, reactpivot, dygraphs, datatables, chart.js, datamaps, leaflet, openlayers, orgchart reports within a dashboad not displaying correctly. Leaflet and OpenLayers template files will require replacing the 'map' element id with the variable mapId.
* Allow import/export of repository artefacts
* Fix for inability to enter chained depends values more than 2 characters

ART 3.2
* Added Velocity report type
* Added OrgChart report types
* Allow individual jobs to use different smtp servers
* Fix for jpivot reports not working
* Save settings in the art database. Settings will need to be re-entered.
* Fix for job parameter value being blank on edit
* Preserve column order in JSON output (thanks to Tin Blaskovic)
* Changed default connection pool library to hikaricp
* Allow job email addresses to be separated by ,
* Allow application logs to be written to a database
* Added context path variable for freemarker and thymleaf output