@@ -364,7 +364,7 @@ INSERT INTO ART_QUERIES VALUES(-1,4,'Regions LoV','2011-01-20 00:00:00.000000','
 INSERT INTO ART_QUERIES VALUES(-1,5,'Cities LoV','2011-01-20 00:00:00.000000','','','','',NULL,NULL,119,'',NULL,NULL,NULL,NULL,NULL,NULL,NULL,1,0,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,0,0,NULL,NULL,NULL,'/* Purpose: \u000d\u000a * show how dynamic SQL can be used to update query structure\u000d\u000a * in a LoV to use it as a standalone LoV or as a chained lov\u000d\u000a * (see Admin Manual for further details)\u000d\u000a */\u000d\u000a\u000d\u000aSELECT CITY_ID, NAME FROM CITIES \u000d\u000a/* the below is an example of dynamic SQL: if the value of a \u000d\u000a * parameter named "filter" is passed to the query the additional\u000d\u000a * text is appended\u000d\u000a * The parameter named "filter" is used to pass the value\u000d\u000a * of the master paramater.\u000d\u000a */\u000d\u000a<IF> <EXP1>#filter#</EXP1><OP>is not null</OP>\u000d\u000a     <TEXT> WHERE REGION_ID = #filter# </TEXT>\u000d\u000a</IF>\u000d\u000aORDER BY 2',NULL,'Cities List of Values','LoV using Dynamic SQL to be used also as a chained parameter',1,0)
 INSERT INTO ART_QUERIES VALUES(0,6,'1.Tabular-Items Volume','2011-01-25 00:00:00.000000','','','','',NULL,NULL,0,'',NULL,NULL,NULL,NULL,NULL,NULL,NULL,1,0,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,0,0,NULL,NULL,NULL,'/*\u000d\u000a * Purpose: \u000d\u000a * show a plain tabular query\u000d\u000a * show how to use inline date parameters\u000d\u000a * show how to use inline loV parameter\u000d\u000a */\u000d\u000aSELECT r.NAME "Region",\u000d\u000a       TO_CHAR ( o.ORDER_DATE, ''YYYY-MM'' ) "Period", \u000d\u000a       i.NAME "Item", \u000d\u000a       SUM(o.VOLUME) "Volume"\u000d\u000a  FROM ORDERS o, ITEMS i, REGIONS r, CITIES c\u000d\u000a WHERE r.REGION_ID = c.REGION_ID\u000d\u000a   AND o.CITY_ID  = c.CITY_ID\u000d\u000a   AND o.ITEM_ID  = i.ITEM_ID\u000d\u000a   AND r.REGION_ID = #regionId# --the lov query passes the first column\u000d\u000a   AND o.ORDER_DATE BETWEEN #startDate# AND #endDate#\u000d\u000a GROUP BY r.NAME,  TO_CHAR ( o.ORDER_DATE, ''YYYY-MM'' ), i.NAME\u000d\u000a ORDER BY 1,2,3',NULL,'Monthly Items Volume by Regions','Displays monthly volume of items sold by region',1,0)
 INSERT INTO ART_QUERIES VALUES(0,7,'6.BarChart-Yearly Volume','2012-04-26 00:00:00.000000','','','','X axis Label','Y axis Label','600x300 0:0 #FFFFFF showlegend   ',-4,'',NULL,NULL,NULL,NULL,NULL,NULL,NULL,1,0,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,0,0,NULL,NULL,NULL,'/*\u000d\u000a * Purpose: \u000d\u000a * show bar char, how to sort bars in a bar chart\u000d\u000a *  how to change default size (see Short Description)\u000d\u000a * show how inline multi-params can be used \u000d\u000a *\u000d\u000a */\u000d\u000a\u000d\u000aSELECT TO_CHAR ( o.ORDER_DATE, ''MONTH'' ) "Y axis label",  \u000d\u000a       r.NAME "Series Name" ,\u000d\u000a       SUM(o.VOLUME) "Value"  \u000d\u000a  FROM ORDERS o, ITEMS i, REGIONS r, CITIES c\u000d\u000a WHERE r.REGION_ID = c.REGION_ID\u000d\u000a   AND o.CITY_ID  = c.CITY_ID\u000d\u000a   AND o.ITEM_ID  = i.ITEM_ID\u000d\u000a   AND TO_CHAR (o.ORDER_DATE,''YYYY'') = #year#\u000d\u000a   AND r.REGION_ID in (#regionIds#)\u000d\u000a GROUP BY TO_CHAR ( o.ORDER_DATE, ''MONTH'' ) ,r.NAME\u000d\u000a-- ORDER BY TO_CHAR ( o.ORDER_DATE, ''YYYY-MM'' )\u000d\u000a -- The last order by is to sort correctly the month that would\u000d\u000a -- be otherwise sorted alphabetically (i.e. Feb before Jan etc)',NULL,'Yearly  Volume - Chart','Shows a bar chart',1,0)
-INSERT INTO ART_QUERIES VALUES(0,8,'5.PieChart-Items Volume','2011-04-01 00:00:00.000000','','','','Shows a pie chart with sold items in the selected ','null','400x300 0:0 #FFFFFF showlegend showlabels  ',-2,'',NULL,NULL,NULL,NULL,NULL,NULL,NULL,1,0,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,0,0,NULL,NULL,NULL,'/*\u000d\u000a * Purpose: \u000d\u000a * show pie chart\u000d\u000a * show how a LoV can be used\u000d\u000a * show how inline date parameters can be used \u000d\u000a *\u000d\u000a */\u000d\u000aSELECT i.name "Item", \u000d\u000a       SUM(o.VOLUME) "Volume"\u000d\u000a  FROM ORDERS o, ITEMS i, REGIONS r, CITIES c\u000d\u000a WHERE r.REGION_ID = c.REGION_ID\u000d\u000a   AND o.CITY_ID  = c.CITY_ID\u000d\u000a   AND o.ITEM_ID  = i.ITEM_ID\u000d\u000a   AND r.REGION_ID = #regionId# --the lov passes the first column\u000d\u000a   AND o.ORDER_DATE BETWEEN #startDate# AND #endDate#\u000d\u000a GROUP BY i.NAME\u000d\u000a ORDER BY 1',NULL,'Items Volume','Shows a pie chart with sold items in the selected region and specified period',1,0)
+INSERT INTO ART_QUERIES VALUES(0,8,'5.PieChart-Items Volume','2011-04-01 00:00:00.000000','','','','Shows a pie chart with sold items in the selected ',NULL,'400x300 0:0 #FFFFFF showlegend showlabels  ',-2,'',NULL,NULL,NULL,NULL,NULL,NULL,NULL,1,0,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,0,0,NULL,NULL,NULL,'/*\u000d\u000a * Purpose: \u000d\u000a * show pie chart\u000d\u000a * show how a LoV can be used\u000d\u000a * show how inline date parameters can be used \u000d\u000a *\u000d\u000a */\u000d\u000aSELECT i.name "Item", \u000d\u000a       SUM(o.VOLUME) "Volume"\u000d\u000a  FROM ORDERS o, ITEMS i, REGIONS r, CITIES c\u000d\u000a WHERE r.REGION_ID = c.REGION_ID\u000d\u000a   AND o.CITY_ID  = c.CITY_ID\u000d\u000a   AND o.ITEM_ID  = i.ITEM_ID\u000d\u000a   AND r.REGION_ID = #regionId# --the lov passes the first column\u000d\u000a   AND o.ORDER_DATE BETWEEN #startDate# AND #endDate#\u000d\u000a GROUP BY i.NAME\u000d\u000a ORDER BY 1',NULL,'Items Volume','Shows a pie chart with sold items in the selected region and specified period',1,0)
 INSERT INTO ART_QUERIES VALUES(0,9,'3.Chained-Volume by City','2011-01-25 00:00:00.000000','','','','',NULL,NULL,0,'',NULL,NULL,NULL,NULL,NULL,NULL,NULL,1,0,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,0,0,NULL,NULL,NULL,'/*\u000d\u000a * Purpose: \u000d\u000a * show how chained parameters work\u000d\u000a * \u000d\u000a */\u000d\u000aSELECT c.NAME "City",\u000d\u000a       TO_CHAR ( o.ORDER_DATE, ''YYYY-MM'' ) "Period", \u000d\u000a       i.NAME "Item", \u000d\u000a       SUM(o.VOLUME) "Volume"\u000d\u000a  FROM ORDERS o, ITEMS i, REGIONS r, CITIES c\u000d\u000a WHERE r.REGION_ID = c.REGION_ID\u000d\u000a   AND o.CITY_ID  = c.CITY_ID\u000d\u000a   AND o.ITEM_ID  = i.ITEM_ID\u000d\u000a   AND r.REGION_ID = #regionId# -- master parameter\u000d\u000a   AND c.CITY_ID   = #cityId#   -- chained parameter based on region\u000d\u000a   AND o.ORDER_DATE BETWEEN #startDate# AND #endDate#\u000d\u000a GROUP BY c.NAME,  TO_CHAR ( o.ORDER_DATE, ''YYYY-MM'' ), i.NAME\u000d\u000a ORDER BY 1,2,3',NULL,'Monthly Items by City','Displays monthly volume of items sold in selected City (uses chained parameters)',1,0)
 INSERT INTO ART_QUERIES VALUES(0,10,'2.Crosstab-Items Volume','2011-01-25 00:00:00.000000','','','','',NULL,NULL,101,'',NULL,NULL,NULL,NULL,NULL,NULL,NULL,1,0,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,0,0,NULL,NULL,NULL,'/*\u000d\u000a * Purpose: \u000d\u000a * show a crosstab query and how the alternate sort works\u000d\u000a * \u000d\u000a * By default the Period column is ordered alphabetically\u000d\u000a * (so 2010-Feb would be before 2010-Jan). Uncomment the 4 commented\u000d\u000a * lines to tell Art how to sort the columns\u000d\u000a */\u000d\u000a\u000d\u000aSELECT TO_CHAR ( o.ORDER_DATE, ''YYYY-MON'' ) "Period", \u000d\u000a       --TO_CHAR ( o.ORDER_DATE, ''YYYY-MM'' ) "Period Sort", \u000d\u000a       i.NAME "Item", \u000d\u000a       --i.NAME "Item Sort", -- actually, no changes here\u000d\u000a       SUM(o.VOLUME) "Volume"\u000d\u000a  FROM ORDERS o, ITEMS i, REGIONS r, CITIES c\u000d\u000a WHERE r.REGION_ID = c.REGION_ID\u000d\u000a   AND o.CITY_ID  = c.CITY_ID\u000d\u000a   AND o.ITEM_ID  = i.ITEM_ID\u000d\u000a   AND r.REGION_ID = #regionId# --the lov query passes the first column\u000d\u000a   AND o.ORDER_DATE BETWEEN #startDate# AND #endDate#\u000d\u000a GROUP BY TO_CHAR ( o.ORDER_DATE, ''YYYY-MON'' )\u000d\u000a       --, TO_CHAR ( o.ORDER_DATE, ''YYYY-MM'' )\u000d\u000a       , i.NAME\u000d\u000a       --, i.NAME ',NULL,'Items Volume - Crosstab','Displays monthly volume of items sold in Crosstab (Pivot) Format',1,0)
 INSERT INTO ART_QUERIES VALUES(-1,11,'YesNo','2011-01-20 00:00:00.000000','','','','',NULL,NULL,119,'',NULL,NULL,NULL,NULL,NULL,NULL,NULL,1,0,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,0,0,NULL,NULL,NULL,'SELECT ''Y'', ''Yes'' FROM ITEMS WHERE ITEM_ID=1\u000d\u000a union all\u000d\u000aSELECT ''N'', ''No'' FROM ITEMS WHERE ITEM_ID=1\u000d\u000a\u000d\u000a/** note: the above is a trick to generate just a Yes/No list\u000d\u000a    in hsqldb (the database used for the Art Demo),\u000d\u000a    in other database you can use:\u000d\u000aOracle:\u000d\u000aSELECT ''Y'', ''Yes'' FROM DUAL\u000d\u000a union all\u000d\u000aSELECT ''N'', ''No'' FROM DUAL\u000d\u000aMysql:\u000d\u000aSELECT ''Y'', ''Yes'' \u000d\u000a union all\u000d\u000aSELECT ''N'', ''No'' \u000d\u000aetc...\u000d\u000a*/',NULL,'Select Yes or No','ouputs the list\u000d\u000aY, Yes\u000d\u000aN, No',1,0)
@@ -439,10 +439,10 @@ INSERT INTO ART_QUERIES VALUES(0,79,'Orders table - tab delimited output job',NU
 INSERT INTO ART_QUERIES VALUES(0,80,'Fixed Width 1','2017-02-17 10:25:10.101000','','','','','',NULL,141,'The Mighty Admin',0,'2017-02-17 10:23:59.510000','admin','admin',0,0,NULL,1,0,'default','','','','','','','','','',0,'{\u000d\u000a    "fieldLengths": [8,6,8,10,10,8]\u000d\u000a}',NULL,0,0,NULL,NULL,NULL,'select * from orders',NULL,'','Fixed width - minimal configuration',1,0)
 INSERT INTO ART_QUERIES VALUES(0,81,'Fixed Width 2','2017-02-17 10:41:32.738000','','','','','',NULL,141,'The Mighty Admin',0,'2017-02-17 10:29:25.299000','admin','admin',0,0,NULL,1,0,'default','','','','','','','','','',0,'{\u000d\u000a    "fieldLengthsByName": [{"ORDER_ID": 10}, {"ORDER_DATE": 14}, {"VOLUME": 10}]\u000d\u000a}',NULL,0,0,NULL,NULL,NULL,'select order_id, order_date, volume\u000d\u000afrom orders',NULL,'','Fixed width - field lengths by name',1,0)
 INSERT INTO ART_QUERIES VALUES(0,82,'Fixed Width 3',NULL,'','','','','',NULL,141,'The Mighty Admin',0,'2017-02-17 10:45:54.375000','admin',NULL,0,0,NULL,1,0,'default','','','','','','','','','',0,'{\u000d\u000a    "fieldLengthsByName": [{"ORDER_ID": 10}, {"ORDER_DATE": 14}, {"VOLUME": 10}],\u000d\u000a    "dateFormat": "dd-MMM-yyyy",\u000d\u000a    "fieldNumberFormats": [{"0.00": ["volume"]}],\u000d\u000a    "fieldAlignmentByName": [{"right": ["order_id"]}]\u000d\u000a}',NULL,0,0,NULL,NULL,NULL,'select order_id, order_date, volume\u000d\u000afrom orders',NULL,'','Fixed width - date format, field number format, field alignment by name',1,0)
-INSERT INTO ART_QUERIES VALUES(0,83,'C3.js 1',NULL,'sample-c3js1.js','','','Shows a pie chart with sold items in the selected ','null',NULL,142,'',0,'2017-02-20 11:57:16.617000','admin',NULL,0,0,NULL,1,0,'default','','','','','','','','','',0,'',NULL,0,0,NULL,NULL,NULL,'/*\u000d\u000a * Purpose: \u000d\u000a * show pie chart\u000d\u000a * show how a LoV can be used\u000d\u000a * show how inline date parameters can be used \u000d\u000a *\u000d\u000a */\u000d\u000aSELECT i.name "Item", \u000d\u000a       SUM(o.VOLUME) "Volume"\u000d\u000a  FROM ORDERS o, ITEMS i, REGIONS r, CITIES c\u000d\u000a WHERE r.REGION_ID = c.REGION_ID\u000d\u000a   AND o.CITY_ID  = c.CITY_ID\u000d\u000a   AND o.ITEM_ID  = i.ITEM_ID\u000d\u000a   AND r.REGION_ID = #regionId# --the lov passes the first column\u000d\u000a   AND o.ORDER_DATE BETWEEN #startDate# AND #endDate#\u000d\u000a GROUP BY i.NAME\u000d\u000a ORDER BY 1',NULL,'Items Volume','Shows a pie chart with sold items in the selected region and specified period',1,0)
-INSERT INTO ART_QUERIES VALUES(0,84,'C3.js 2','2017-02-20 20:20:13.359000','sample-c3js2.js','','','Shows a pie chart with sold items in the selected ','null',NULL,142,'',0,'2017-02-20 12:02:44.535000','admin','admin',0,0,NULL,1,0,'default','','','','','','','','','',0,'{\u000d\u000a    "cssFile": "sample-c3js2.css"\u000d\u000a}',NULL,0,0,NULL,NULL,NULL,'/*\u000d\u000a * Purpose: \u000d\u000a * show pie chart\u000d\u000a * show how a LoV can be used\u000d\u000a * show how inline date parameters can be used \u000d\u000a *\u000d\u000a */\u000d\u000aSELECT i.name "Item", \u000d\u000a       SUM(o.VOLUME) "Volume"\u000d\u000a  FROM ORDERS o, ITEMS i, REGIONS r, CITIES c\u000d\u000a WHERE r.REGION_ID = c.REGION_ID\u000d\u000a   AND o.CITY_ID  = c.CITY_ID\u000d\u000a   AND o.ITEM_ID  = i.ITEM_ID\u000d\u000a   AND r.REGION_ID = #regionId# --the lov passes the first column\u000d\u000a   AND o.ORDER_DATE BETWEEN #startDate# AND #endDate#\u000d\u000a GROUP BY i.NAME\u000d\u000a ORDER BY 1',NULL,'Items Volume','C3.js - pie with custom label - label includes data value',1,0)
+INSERT INTO ART_QUERIES VALUES(0,83,'C3.js 1',NULL,'sample-c3js1.js','','','Shows a pie chart with sold items in the selected ',NULL,NULL,142,'',0,'2017-02-20 11:57:16.617000','admin',NULL,0,0,NULL,1,0,'default','','','','','','','','','',0,'',NULL,0,0,NULL,NULL,NULL,'/*\u000d\u000a * Purpose: \u000d\u000a * show pie chart\u000d\u000a * show how a LoV can be used\u000d\u000a * show how inline date parameters can be used \u000d\u000a *\u000d\u000a */\u000d\u000aSELECT i.name "Item", \u000d\u000a       SUM(o.VOLUME) "Volume"\u000d\u000a  FROM ORDERS o, ITEMS i, REGIONS r, CITIES c\u000d\u000a WHERE r.REGION_ID = c.REGION_ID\u000d\u000a   AND o.CITY_ID  = c.CITY_ID\u000d\u000a   AND o.ITEM_ID  = i.ITEM_ID\u000d\u000a   AND r.REGION_ID = #regionId# --the lov passes the first column\u000d\u000a   AND o.ORDER_DATE BETWEEN #startDate# AND #endDate#\u000d\u000a GROUP BY i.NAME\u000d\u000a ORDER BY 1',NULL,'Items Volume','Shows a pie chart with sold items in the selected region and specified period',1,0)
+INSERT INTO ART_QUERIES VALUES(0,84,'C3.js 2','2017-02-20 20:20:13.359000','sample-c3js2.js','','','Shows a pie chart with sold items in the selected ',NULL,NULL,142,'',0,'2017-02-20 12:02:44.535000','admin','admin',0,0,NULL,1,0,'default','','','','','','','','','',0,'{\u000d\u000a    "cssFile": "sample-c3js2.css"\u000d\u000a}',NULL,0,0,NULL,NULL,NULL,'/*\u000d\u000a * Purpose: \u000d\u000a * show pie chart\u000d\u000a * show how a LoV can be used\u000d\u000a * show how inline date parameters can be used \u000d\u000a *\u000d\u000a */\u000d\u000aSELECT i.name "Item", \u000d\u000a       SUM(o.VOLUME) "Volume"\u000d\u000a  FROM ORDERS o, ITEMS i, REGIONS r, CITIES c\u000d\u000a WHERE r.REGION_ID = c.REGION_ID\u000d\u000a   AND o.CITY_ID  = c.CITY_ID\u000d\u000a   AND o.ITEM_ID  = i.ITEM_ID\u000d\u000a   AND r.REGION_ID = #regionId# --the lov passes the first column\u000d\u000a   AND o.ORDER_DATE BETWEEN #startDate# AND #endDate#\u000d\u000a GROUP BY i.NAME\u000d\u000a ORDER BY 1',NULL,'Items Volume','C3.js - pie with custom label - label includes data value',1,0)
 INSERT INTO ART_QUERIES VALUES(0,85,'C3.js 3',NULL,'sample-c3js3.js','','','X axis Label','Y axis Label',NULL,142,'',0,'2017-02-20 12:19:20.726000','admin',NULL,0,0,NULL,1,0,'default','','','','','','','','','',0,'',NULL,0,0,NULL,NULL,NULL,'/*\u000d\u000a * Purpose: \u000d\u000a * show bar char, how to sort bars in a bar chart\u000d\u000a *  how to change default size (see Short Description)\u000d\u000a * show how inline multi-params can be used \u000d\u000a *\u000d\u000a */\u000d\u000a\u000d\u000aSELECT TO_CHAR ( o.ORDER_DATE, ''MONTH'' ) "Month",  \u000d\u000a       r.NAME "Name" ,\u000d\u000a       SUM(o.VOLUME) "Value"  \u000d\u000a  FROM ORDERS o, ITEMS i, REGIONS r, CITIES c\u000d\u000a WHERE r.REGION_ID = c.REGION_ID\u000d\u000a   AND o.CITY_ID  = c.CITY_ID\u000d\u000a   AND o.ITEM_ID  = i.ITEM_ID\u000d\u000a   AND TO_CHAR (o.ORDER_DATE,''YYYY'') = #year#\u000d\u000a   AND r.REGION_ID in (#regionIds#)\u000d\u000a GROUP BY TO_CHAR ( o.ORDER_DATE, ''MONTH'' ) ,r.NAME\u000d\u000a-- ORDER BY TO_CHAR ( o.ORDER_DATE, ''YYYY-MM'' )\u000d\u000a -- The last order by is to sort correctly the month that would\u000d\u000a -- be otherwise sorted alphabetically (i.e. Feb before Jan etc)',NULL,'Yearly  Volume - Chart','C3.js - vertical bar chart - dynamic series',1,0)
-INSERT INTO ART_QUERIES VALUES(0,86,'Chart.js 1',NULL,'sample-chartjs1.js','','','Shows a pie chart with sold items in the selected ','null',NULL,143,'',0,'2017-02-21 22:29:11.484000','admin',NULL,0,0,NULL,1,0,'default','','','','','','','','','',0,'',NULL,0,0,NULL,NULL,NULL,'/*\u000d\u000a * Purpose: \u000d\u000a * show pie chart\u000d\u000a * show how a LoV can be used\u000d\u000a * show how inline date parameters can be used \u000d\u000a *\u000d\u000a */\u000d\u000aSELECT i.name "Item", \u000d\u000a       SUM(o.VOLUME) "Volume"\u000d\u000a  FROM ORDERS o, ITEMS i, REGIONS r, CITIES c\u000d\u000a WHERE r.REGION_ID = c.REGION_ID\u000d\u000a   AND o.CITY_ID  = c.CITY_ID\u000d\u000a   AND o.ITEM_ID  = i.ITEM_ID\u000d\u000a   AND r.REGION_ID = #regionId# --the lov passes the first column\u000d\u000a   AND o.ORDER_DATE BETWEEN #startDate# AND #endDate#\u000d\u000a GROUP BY i.NAME\u000d\u000a ORDER BY 1',NULL,'Items Volume','Shows a pie chart with sold items in the selected region and specified period',1,0)
+INSERT INTO ART_QUERIES VALUES(0,86,'Chart.js 1',NULL,'sample-chartjs1.js','','','Shows a pie chart with sold items in the selected ',NULL,NULL,143,'',0,'2017-02-21 22:29:11.484000','admin',NULL,0,0,NULL,1,0,'default','','','','','','','','','',0,'',NULL,0,0,NULL,NULL,NULL,'/*\u000d\u000a * Purpose: \u000d\u000a * show pie chart\u000d\u000a * show how a LoV can be used\u000d\u000a * show how inline date parameters can be used \u000d\u000a *\u000d\u000a */\u000d\u000aSELECT i.name "Item", \u000d\u000a       SUM(o.VOLUME) "Volume"\u000d\u000a  FROM ORDERS o, ITEMS i, REGIONS r, CITIES c\u000d\u000a WHERE r.REGION_ID = c.REGION_ID\u000d\u000a   AND o.CITY_ID  = c.CITY_ID\u000d\u000a   AND o.ITEM_ID  = i.ITEM_ID\u000d\u000a   AND r.REGION_ID = #regionId# --the lov passes the first column\u000d\u000a   AND o.ORDER_DATE BETWEEN #startDate# AND #endDate#\u000d\u000a GROUP BY i.NAME\u000d\u000a ORDER BY 1',NULL,'Items Volume','Shows a pie chart with sold items in the selected region and specified period',1,0)
 INSERT INTO ART_QUERIES VALUES(0,87,'Chart.js 2',NULL,'sample-chartjs2.js','','','X axis Label','Y axis Label',NULL,143,'',0,'2017-02-22 10:02:24.028000','admin',NULL,0,0,NULL,1,0,'default','','','','','','','','','',0,'',NULL,0,0,NULL,NULL,NULL,'/*\u000d\u000a * Purpose: \u000d\u000a * show bar char, how to sort bars in a bar chart\u000d\u000a *  how to change default size (see Short Description)\u000d\u000a * show how inline multi-params can be used \u000d\u000a *\u000d\u000a */\u000d\u000a\u000d\u000aSELECT TO_CHAR ( o.ORDER_DATE, ''MONTH'' ) "Month",  \u000d\u000a       r.NAME "Name" ,\u000d\u000a       SUM(o.VOLUME) "Value"  \u000d\u000a  FROM ORDERS o, ITEMS i, REGIONS r, CITIES c\u000d\u000a WHERE r.REGION_ID = c.REGION_ID\u000d\u000a   AND o.CITY_ID  = c.CITY_ID\u000d\u000a   AND o.ITEM_ID  = i.ITEM_ID\u000d\u000a   AND TO_CHAR (o.ORDER_DATE,''YYYY'') = #year#\u000d\u000a   AND r.REGION_ID in (#regionIds#)\u000d\u000a GROUP BY TO_CHAR ( o.ORDER_DATE, ''MONTH'' ) ,r.NAME\u000d\u000a-- ORDER BY TO_CHAR ( o.ORDER_DATE, ''YYYY-MM'' )\u000d\u000a -- The last order by is to sort correctly the month that would\u000d\u000a -- be otherwise sorted alphabetically (i.e. Feb before Jan etc)',NULL,'Yearly  Volume - Chart','Shows a bar chart',1,0)
 INSERT INTO ART_QUERIES VALUES(0,88,'Datamaps 1',NULL,'sample-datamaps1.js','','','','',NULL,145,'The Mighty Admin',0,'2017-02-28 20:08:12.135000','admin',NULL,0,0,NULL,1,0,'default','','','','','','','','','',0,'{\u000d\u000a    "datamapsJsFile": "datamaps-usa-min.js",\u000d\u000a    "dataFile": "sample-datamaps1.csv",\u000d\u000a    "dataType": "csv"\u000d\u000a}',NULL,0,0,NULL,NULL,NULL,'',NULL,'','Datamaps with csv data',NULL,0)
 INSERT INTO ART_QUERIES VALUES(0,89,'Datamaps 2',NULL,'sample-datamaps2.js','','','','',NULL,145,'The Mighty Admin',0,'2017-02-28 21:18:37.255000','admin',NULL,0,0,NULL,1,0,'default','','','','','','','','','',0,'{\u000d\u000a    "datamapsJsFile": "datamaps-world-min.js"\u000d\u000a}',NULL,0,0,NULL,NULL,NULL,'',NULL,'','Datamaps - world with hardcoded bubbles',NULL,0)
