@@ -1,5 +1,6 @@
 ART 3.5
 * Add field to indicate use of groovy instead of sql in report source
+* Added pivotTableJs as report format option for tabular reports
 
 ART 3.4
 * Allow jobs to specify the time zone in which the schedule will run
